--- a/scss/_ViewControl.scss
+++ b/scss/_ViewControl.scss
@@ -25,7 +25,8 @@ body {
 
 
 .view-control {
-    padding-top: 2em;
+    padding-top: 4em;
+
 
     .side-expanded {
 	@extend .expanded;
