--- a/scss/_sideBar.scss
+++ b/scss/_sideBar.scss
@@ -3,10 +3,10 @@
     position: fixed !important;
     overflow: scroll;
     z-index: 100;
-    top: calc(4 * 16);
+    top: 0;
     left: 0;
+    padding-top: 3.5em;
 
-    padding-top: 1em;
     background-color: $dark2;
     button {
 	width: 100%;
